objects/User.object
<CustomObject>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>PRT_Team__c</fullName>
        <description>Used to determine if certain lightning components should be displayed by checking if the user team matches the owner team</description>
        <label>PRT Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Teams</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_CDsID__c</fullName>
        <label>CDsID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licence_Type__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licence Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Head_shot_Public_URL__c</fullName>
        <description>A link to the image URL from a files public link for the client liaison head-shot and signature</description>
        <label>SO Head-shot Public URL</label>
        <type>Url</type>
    </fields>
</CustomObject>